--- a/homestyle.css
+++ b/homestyle.css
@@ -1,47 +1,22 @@
-html {
-    height: 100%;
+.some-class {
+  min-height: 100vh;
+  background: transparent;
+}
+
+#about {
+    min-height: 100vh;
+    background-color: white;
+}
+
+h1 {
+    font-size: 100px;
+    color: white;
 }
 
 body {
     font-family: 'Fjalla One', sans-serif;
     font-weight: 900;
     color: white;
-    background-image: url(https://static.pexels.com/photos/688660/pexels-photo-688660.jpeg);
-    background-size: cover;
-    background-position: center;
-}
-
-.social {
-    text-align: center;
-    letter-spacing: 3px;
-    font-size: 20px;
-    padding-top: 10px;
-}
-
-.col-md-3 {
-    display: flex;
-}
-
-.col-md-2 {
-    min-width: 20%;
-}
-
-.logo {
-    height: 30px;
-    margin-right: 8px;
-}
-
-.homeName {
-    text-align: center;
-    margin-top: 26%;
-}
-
-h2 {
-    font-size: 30.5px
-}
-
-.sidefade {
-    color: red;
 }
 
 #name {
@@ -50,85 +25,14 @@ h2 {
     text-shadow: 0px 0px 18px rgba(0, 0, 0, 1);
 }
 
-.col-lg-3 {
-    min-width: 25%;
-}
-
-.navBar {
-    padding-top: 23%;
-    padding-bottom: 20px;
+.row {
     text-align: center;
-    letter-spacing: 3px;
-    font-size: 20px;
 }
 
-/*Button Style*/
-.btn {
-	border: none;
-	font-family: inherit;
-	font-size: inherit;
-	color: inherit;
-	background: none;
-	cursor: pointer;
-	padding: 10px 20px;
-	display: inline-block;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: 700;
-	outline: none;
-	position: relative;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
+h2 {
+    font-size: 30.5px
 }
 
-.btn:after {
-	content: '';
-	position: absolute;
-	z-index: -1;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
-.btn-1 {
-	border: 2px solid #fff;
-	color: #fff;
-}
-
-/* Button 1e */
-.btn-1e {
-	overflow: hidden;
-}
-
-.btn-1e:after {
-	width: 100%;
-	height: 0;
-	top: 50%;
-	left: 50%;
-	background: #fff;
-	opacity: 0;
-	-webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-	-moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-	-ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-	transform: translateX(-50%) translateY(-50%) rotate(45deg);
-}
-
-.btn-1e:hover,
-.btn-1e:active {
-	color: grey;
-}
-
-.btn-1e:hover:after {
-	height: 260%;
-	opacity: 1;
-}
-
-.btn-1e:active:after {
-	height: 400%;
-	opacity: 1;
-}
-
-.animsition-overlay-slide {
-    background-color: #f9f9f9;
+.nameHeader {
+    padding-top: 35%;
 }
