--- a/homestyle.css
+++ b/homestyle.css
@@ -59,7 +59,7 @@ h2 {
 }
 
 .navHidden {
-    display: hidden;
+    display: none;
 }
 
 .navbar {
@@ -187,6 +187,7 @@ a:hover {
 
 .nameEmph {
     color: black;
+    font-size: 1.5em;
 }
 
 .blurp {
@@ -277,11 +278,27 @@ textarea:focus {
     margin-top: 15px;
 }
 
-.foot {
-    margin: 5px 0px;
-    background-color: #565656;
-}
-
 #ymessage {
     margin-left: 35px;
+}
+
+h3 {
+    text-align: right;
+}
+
+.col-md-1 {
+    padding-top: 4px;
+}
+
+.navOption {
+    color: #565656;
+    font-size: 18px;
+}
+
+.navOption:hover {
+    color: black;
+}
+
+.fakeIt {
+    color: rgba(0, 0, 0, 0)
 }
