--- a/homestyle.css
+++ b/homestyle.css
@@ -5,11 +5,7 @@ body {
 }
 
 .some-class {
-  background: transparent;
-}
-
-.firstLax {
-      min-height: 400px;
+    background: transparent;
 }
 
 .secondLax {
@@ -49,17 +45,28 @@ h3 {
 }
 
 h2 {
-    font-size: 30.5px;
+    font-size: 34px;
     margin-bottom: 0px;
 }
 
 .nameHeader {
-    padding-top: 37%;
     color: white;
+}
+
+.homeName {
+    text-shadow: 0px 0px 11px rgba(0,0,0,0.45);
+    display: inline-block;
+    height: 100%;
 }
 
 .navHidden {
     display: none;
+}
+
+.vertCenter {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
 }
 
 .navbar {
@@ -94,7 +101,7 @@ a:hover {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
     min-width: 100%;
     min-height: 30%;
-    padding-top: 25px;
+    padding-top: 20px;
 }
 
 #resume {
@@ -139,7 +146,7 @@ a:hover {
     background-image: url("firstLax.jpeg");
 
     /* Set a specific height */
-    height: 100vh;
+    height: 60vh;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -179,9 +186,14 @@ a:hover {
     padding-top: 30px;
 }
 
+.aboutdesc a {
+    color: black;
+}
+
 .social {
     text-align: left;
     padding-top: 30px;
+    color: #565656;
 }
 
 .titleHighlight {
@@ -198,7 +210,7 @@ a:hover {
 
 .headerName {
     color: black;
-    font-size: 1.2em;
+    font-size: 1.7em;
 }
 
 .blurp {
@@ -297,13 +309,13 @@ h3 {
     text-align: right;
 }
 
-.col-md-1 {
+.col-sm-1 {
     padding-top: 4px;
 }
 
 .navOption {
     color: #565656;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .navOption:hover {
